# token-minting-program

./: .gitignore  Anchor.toml  package-lock.json  package.json  tsconfig.json
client/: .gitignore  package.json
client/src/: index.ts
client/src/helpers/: constants.ts  mixins.ts  pdas.ts
client/src/instructions/: CreateMintGovernace.ts  CreateTokenWithMetadata.ts  MintCommunityTokenThroughRealm.ts  MintCommunityTokenToNftHolder.ts
programs/vita_token/: Cargo.toml
programs/vita_token/src/: context.rs  lib.rs  processor.rs  state.rs
tests/: vita_token.ts
